test/testdata_vm/001 add_imm_too_large.err
Syntax error (test/testdata_vm/001 add_imm_too_large.asm: 1): number argument to ADD is too large to fit in 5 bits: 5000