test/testdata_vm/001 add_imm_too_large.asm
ADD R0 R0 #5000
HALT